@@ -15,17 +15,20 @@ public class TileUpdate : SequenceAction
 
 	public override BatchingMode Batching => BatchingMode.Sequential;
 	private WorldTile.WorldTileData _data = new WorldTile.WorldTileData();
+	private bool force = false;
 	
-	public static TileUpdate Make(Vector2Int location) 
+	public static TileUpdate Make(Vector2Int location, bool force) 
 	{
 		TileUpdate t = (GetAction(SequenceType.TileUpdate) as TileUpdate)!;
 		t._data = WorldManager.Instance.GetTileAtGrid(location).GetData();
+		t.force = force;
 		return t;
 	}
-	public static TileUpdate Make(WorldTile.WorldTileData data) 
+	public static TileUpdate Make(WorldTile.WorldTileData data,bool force) 
 	{
 		TileUpdate t = (GetAction(SequenceType.TileUpdate) as TileUpdate)!;
 		t._data = data;
+		t.force = force;
 		return t;
 	}
 	public override bool ShouldDo()
@@ -74,6 +77,12 @@ public class TileUpdate : SequenceAction
 
 	public override bool ShouldSendToPlayerServerCheck(bool player1)
 	{
+		if(force)
+			return true;
+		if(GameManager.GetPlayer(player1)!.WorldState.TryGetValue(_data.Position, out var value))
+		{
+			return !value.Equals(_data);
+		}
 		return true;
 	}
 #endif
